# blob-store

./: README.md  pyproject.toml
docs/: usage.ipynb
src/blob_store/: copy.py  deserialise.py  implicit.py  shortcuts.py
src/blob_store/backends/: azure_blob_storage.py  local_relative.py  s3.py
src/blob_store/core/: __init__.py  interface.py
